--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
 body {
+  font-family: 'Segoe UI', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #3ba469;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  display: flex;
+  padding: 20px;
+  gap: 40px;
+  justify-content: center;
+}
+
+.shoe-list, .cart {
+  width: 45%;
+  background: #ba6666;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+
+.shoe-grid {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.shoe-card {
+  width: 150px;
+  padding: 10px;
+  border: 1px solid #76acdb;
+  border-radius: 8px;
+  text-align: center;
+  background-color: #c7df87;
+}
+
+.shoe-card img {
+  width: 100%;
+  border-radius: 4px;
+}
+
+button {
+  margin-top: 10px;
+  background-color: #ffb400;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.cart-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.cart-item img {
+  width: 60px;
+  margin-right: 15px;
+}
+
+.quantity {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.quantity button {
+  background: #007bff;
+  color: rgb(27, 12, 12);
+  font-weight: bold;
 }
